[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = "Leetcode solutions"
authors = ["Alberto Murillo"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
pylint = "^3.2.5"
pyright = "^1.1.369"
pytest = "^8.2.2"
pytest-benchmark = "^4.0.0"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["src"]
