[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = "Leetcode solutions"
authors = ["Alberto Murillo"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pylint = "^3.3.1"
pyright = "^1.1.382.post0"
pytest = "^8.3.3"
pytest-benchmark = "^4.0.0"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
ruff = "^0.6.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
skip_covered = true
