[project]
name = "leetcode"
version = "0.1.0"
description = "Leetcode solutions"
requires-python = ">=3.12"
authors = [{ name = "Alberto Murillo" }]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pylint>=3.3.4",
    "pyright>=1.1.393",
    "pytest>=8.3.4",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
skip_covered = true
